--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,8 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
+
+  background: #f2f3f5;
+
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -13,4 +14,6 @@ a {
 
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
